@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage1_target.py,v 1.15 2005/08/09 14:12:26 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage1_target.py,v 1.16 2005/09/08 20:20:03 rocket Exp $
 
 """
 Builder class for LiveCD stage1.
@@ -13,6 +13,9 @@ class livecd_stage1_target(generic_stage_target):
 	def __init__(self,spec,addlargs):
 		self.required_values=["livecd/packages","livecd/use"]
 		self.valid_values=self.required_values[:]
+
+		# Add optional livecd/type field for extra specific stuff 
+		self.valid_values.extend(["livecd/type"])
 		generic_stage_target.__init__(self,spec,addlargs)
 
 	def set_action_sequence(self):
